Practice - added table - added fieldset - added some styles

--- a/index.html
+++ b/index.html
@@ -18,5 +18,28 @@
     <p>
         This is a small text.
     </p>
+    <table>
+        <tr>
+            <th>head 1</th>
+            <th>head 2</th>
+            <th>head 3</th>
+        </tr>
+        <tr>
+            <td>ele 1</td>
+            <td>ele 2</td>
+            <td>ele 3</td>
+        </tr>
+        <tr>
+            <td>ele 1</td>
+            <td>ele 2</td>
+            <td>ele 3</td>
+        </tr>
+    </table>
+    <fieldset>
+        <legend>NAME</legend>
+        ELE 1<br>
+        ELE 2<br>
+        ELE 3<br>
+    </fieldset>
 </body>
 </html>
