Updated css - moved some style tags into css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="header">
+    <div>HEADER</div>
+    <hr><hr>
+</div>
+<div class="main">
     <h1>Big Text</h1>
     <hr>
     <p>
@@ -41,5 +46,7 @@
         ELE 2<br>
         ELE 3<br>
     </fieldset>
+    <div style="height: 900px; background-color: aliceblue; color: red;">aaa</div>
+</div>
 </body>
 </html>
